--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,8 +4,8 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. <br/><br/>
-			I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
+			I am a Mechatronics Engineer working at BioCarbon Engineering, having previously ran a 3D printing business, which developed my skills in product development, and rapid prototyping. <br/><br/>
+			I enjoy developing new technologies which combine mechanical, electrical and software development skills.
 		</div>
 		<br>
 	</div>
