--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,8 +1,8 @@
-/*body {
+body {
 	background: url('../img/gray_jean.png');
 	padding-top: 40px;
 	color: rgb(24, 24, 24);
-}*/
+}
 
 html, body {
 	height: 100%;
