Testing new favicon

--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,8 +4,8 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Mechatronics Engineer working at BioCarbon Engineering, having previously ran a 3D printing business, which developed my skills in product development, and rapid prototyping. <br/><br/>
-			I enjoy developing new technologies which combine mechanical, electrical and software development skills.
+			I am a Mechatronics Engineer working at BioCarbon Engineering, having previously ran a 3D printing business, which developed my skills in product development, and rapid prototyping. At BioCarbon I've worked in a variety of areas, rapid prototyping, product management, project management, and computer vision as some examples.  I am also an active pilot for both fixed-wing and quadcopter drones for BioCarbon Engineering. <br/><br/>
+			While I am an avid cryptocurrency trader, I am incredibly excited by the potential of the underlying technologies.
 		</div>
 		<br>
 	</div>
