--- a/css/main_style.css
+++ b/css/main_style.css
@@ -161,11 +161,11 @@ table {
 }
 
 .light_grey {
-	background-color:#b7ff00;
+	background-color:#B7FF00;
 }
 
 .secondary_blocks{
-	background-color:#c70024;
+	background-color:#ECECEC;
 }
 
 .login_menu {
@@ -173,7 +173,7 @@ table {
 }
 
 .lighter_grey {
-	background-color:#ECEFE6;
+	background-color:#C70024;
 }
 
 .dark_grey {
