--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -22,7 +22,7 @@
 	padding: 5px; 
 }
 .label-info, .badge-info {
-	background-color: #c70024;
+	background-color: #005985;
 	text-shadow:none;
 	font-weight: normal;
 	
