--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,7 +1,7 @@
 body {
-	background: url('../img/gray_jean.png');
+	background: url('../img/body-bg.png');
 	padding-top: 40px;
-	color: rgb(24, 24, 24);
+	color: rgb(55, 0, 24);
 }
 
 html, body {
